# Soroban-Registry

./: BUILD_STATUS.md  CI_CD_READY.md  CI_CD_STATUS.md  COMMIT_MESSAGE.txt  COMPILATION_STATUS.md  CONTRIBUTING.md  DRP_IMPLEMENTATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MAINTENANCE_MODE_IMPLEMENTATION.md  README.md  REGRESSION_TESTING_IMPLEMENTATION.md  REMEDIATION_REPORT.md  docker-compose.yml  package-lock.json  pr_description.md  verify_sorting.sh
.github/workflows/: ci.yml  docker-build.yml
.kiro/specs/frontend-error-handling/: tasks.md
backend/: Cargo.toml
backend/api/: Cargo.toml  output.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt
backend/api/src/: aggregation.rs  analytics.rs  audit_handlers.rs  audit_routes.rs  auth.rs  auth_handlers.rs  auth_middleware.rs  backup_handlers.rs  backup_routes.rs  benchmark_engine.rs  benchmark_handlers.rs  benchmark_routes.rs  breaking_changes.rs  cache.rs  cache_benchmark.rs  capacity_engine.rs  capacity_handlers.rs  capacity_routes.rs  checklist.rs  config_handlers.rs  config_routes.rs  contract_history_handlers.rs  contract_history_routes.rs  cost_handlers.rs  cost_routes.rs  custom_metrics_handlers.rs  deprecation_handlers.rs  detector.rs  disaster_recovery_models.rs  error.rs  event_handlers.rs  event_routes.rs  feature_flag_handlers.rs  feature_flag_routes.rs  formal_verification_handlers.rs  formal_verification_routes.rs  governance_handlers.rs  governance_routes.rs  handlers.rs  handlers_clean.rs  (+48 more)
backend/api/src/handlers/: compatibility.rs  migrations.rs  reviews.rs
backend/api/src/type_safety/: bindings.rs  mod.rs  openapi.rs  parser.rs  types.rs  validator.rs
backend/api/src/validation/: extractors.rs  mod.rs  requests.rs  sanitizers.rs  validators.rs
backend/api/tests/: compatibility_tests.rs  regression_tests.rs
backend/contract_abi/src/: lib.rs  openapi.rs  types.rs
backend/indexer/: check.txt  check2.txt  check3.txt  check_output.txt  test2_output.txt  test_output.txt
backend/indexer/src/: backoff.rs  config.rs  db.rs  detector.rs  lib.rs  main.rs  reorg.rs  rpc.rs  state.rs
backend/indexer/tests/: integration_tests.rs
backend/seeder/: Cargo.toml
backend/seeder/src/: data.rs  main.rs
backend/shared/: Cargo.toml
backend/shared/src/: abi.rs  lib.rs  models.rs  semver.rs  upgrade.rs
backend/shared/tests/: upgrade_tests.rs
backend/verifier/: Cargo.toml
backend/verifier/src/: lib.rs
cli/: Cargo.toml  build.rs  cargo-errors.txt  cargo-test-errors.txt  refactor_commands.py  test-out.txt  test-output.txt
cli/imported/: Cargo.toml
cli/src/: backup.rs  commands.rs  config.rs  conversions.rs  coverage.rs  events.rs  export.rs  formal_verification.rs  fuzz.rs  import.rs  incident.rs  main.rs  manifest.rs  multisig.rs  package_signing.rs  patch.rs  profiler.rs  sla.rs  test_framework.rs  test_scan.sh  wizard.rs
cli/tests/: multisig_integration.rs  network_integration.rs  template_commands.rs
compliance_toolkit/: README.md  __init__.py  __main__.py  main.py  requirements.txt  utils.py
compliance_toolkit/checklists/: gdpr.json  soc2.json
database/migrations/: 002_add_abi.sql  003_canary_releases.sql  004_ab_testing.sql  004_audit_log.sql  008_dependency_scanning.sql  008_governance_framework.sql  010_formal_verification.sql  20260220000000_add_database_performance_indexes.sql
examples/: custom-seed-data.json  test_example.yaml
frontend/: ERROR_HANDLING.md  lint_output.txt  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  swagger-ui-react.d.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/contracts/: contracts-content.tsx  page.tsx
frontend/app/graph/: graph-content.tsx  page.tsx
frontend/app/publish/: page.tsx
frontend/app/skeleton-demo/: page.tsx
frontend/app/templates/: page.tsx
frontend/components/: CodeCopyButton.tsx  CodeRunner.tsx  CompatibilityMatrix.tsx  ContractAbi.tsx  ContractCard.tsx  ContractCardSkeleton.tsx  CustomMetricsPanel.tsx  DependencyGraph.tsx  ErrorFallback.tsx  ErrorStateDisplay.tsx  ExampleCard.tsx  ExampleCardSkeleton.tsx  ExampleGallery.tsx  FormalVerificationPanel.tsx  GraphControls.tsx  HealthWidget.tsx  InteractionHistorySection.tsx  LoadingSkeleton.tsx  MaintenanceBanner.tsx  MaturityBadge.tsx  Navbar.tsx  OptimizedImage.tsx  Providers.tsx  README_SKELETONS.md  SkeletonDemo.tsx  TemplateCard.tsx  TemplateCardSkeleton.tsx  TemplateGallery.tsx  ThemeToggle.tsx  ToastContainer.tsx
frontend/components/contracts/: ActiveFilters.tsx  FilterPanel.tsx  ResultsCount.tsx  (+2 more)
frontend/hooks/: useAnalytics.ts  useCopy.ts  useRetry.ts
frontend/lib/: analytics.ts  api.ts  formValidation.ts  images.ts  mock-data.ts  mock-examples.ts
frontend/providers/: ToastProvider.tsx
observability/prometheus/: prometheus.yml
soroban-registry/: Cargo.toml
soroban-registry/crates/soroban-batch/: Cargo.toml
soroban-registry/crates/soroban-batch/src/: lib.rs  rollback.rs
soroban-registry/crates/soroban-lint-cli/: Cargo.toml
soroban-registry/crates/soroban-lint-cli/src/: main.rs
soroban-registry/crates/soroban-lint-core/src/: analyzer.rs  config.rs  diagnostic.rs  fixer.rs
soroban-registry/crates/soroban-lint-core/src/rules/: hardcoded_addresses.rs  improper_token_handling.rs  large_data_in_storage.rs  missing_access_control.rs  missing_auth_check.rs  missing_error_handling.rs  missing_events.rs  mod.rs  public_fn_no_doc.rs  reentrancy.rs  storage_key_collision.rs  type_confusion.rs  unchecked_arithmetic.rs  unsafe_patterns.rs  unused_variables.rs
soroban-registry/crates/soroban-load-balancer/src/: balancer.rs  health.rs  instance.rs  lib.rs  session.rs  types.rs
soroban-registry/crates/soroban-load-balancer/src/algorithms/: geographic.rs  mod.rs  round_robin.rs
soroban-registry/crates/soroban-state-core/src/: client.rs  decoder.rs  differ.rs  dry_run.rs  inspector.rs  types.rs
soroban-registry/examples/: token_with_issues.rs
tagging-service/: package-lock.json  package.json  tsconfig.json
tagging-service/src/: controller.ts  cron.ts  db.ts  index.ts  models.ts
(+3 files in other folders)
