[workspace]
members = [
    "crates/soroban-lint-core",
    "crates/soroban-lint-cli",
]
resolver = "2"

[workspace.dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1"
walkdir = "2"
anyhow = "1"
colored = "2"
sha2 = "0.10"
regex = "1"
thiserror = "1"
