[package]
name = "seeder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "seeder"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = "1.0"
uuid = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["std_rng"] }
colored = "2.1"
dotenv = "0.15"
