[package]
name = "verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "verifier"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
tracing = "0.1"


tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
